--- a/project-3.ipynb
+++ b/project-3.ipynb
@@ -8,6 +8,10 @@
    },
    "outputs": [],
    "source": [
+    "# test data\n",
+    "\n",
+    "\n",
+    "\n",
     "# mapper\n",
     "\n",
     "import sys\n",
@@ -18,17 +22,12 @@
     "        # strip off extra whitespace, split on tab and put the data in an array\n",
     "        data = line.strip().split(\"\\t\")\n",
     "\n",
-    "        # This is the place you need to do some defensive programming\n",
-    "        # what if there are not exactly 6 fields in that line?\n",
-    "        # YOUR CODE HERE\n",
+    "        # Defensive programming\n",
     "        if len(data) == 6:\n",
-    "        # this next line is called 'multiple assignment' in Python\n",
-    "        # this is not really necessary, we could access the data\n",
-    "        # with data[2] and data[5], but we do this for conveniency\n",
-    "        # and to make the code easier to read\n",
+    "        # multiple assignment\n",
     "            date, time, store, item, cost, payment = data\n",
     "        \n",
-    "        # Now print out the data that will be passed to the reducer\n",
+    "        # print out the data that will be passed to the reducer\n",
     "            print \"{0}\\t{1}\".format(store, cost)"
    ]
   }
